--- a/riskapp/templates/riskapp/list.html
+++ b/riskapp/templates/riskapp/list.html
@@ -32,6 +32,7 @@
             <select v-else-if="fld['field_type'] === 'ENUM'" ><option v-for="(ele, index) in fld['field_metadata'].split(',')">${ ele }$</option></select>
             </td></tr></table>
     </td></tr></table>
+
 </div>
 
 <script>
@@ -44,7 +45,7 @@ new Vue({
             flds: [],
         },
         http: {
-            root: 'https://insurance-project.herokuapp.com',
+            root: 'https://7ikkxmzsna.execute-api.us-east-2.amazonaws.com/dev',
         },
         methods: {
             getRisks: function () {this.$http.get('risks/').then(function(response) {this.risks = response.body;})},
